# GameOfLife

./: .gitignore  CMakeLists.txt  Readme.md
include/: Grid.h  Window.h
src/: Grid.cc  Window.cc  main.cc
test/: main.cc
